--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<html></html>
+<!doctype html>
+<html class="no-js" lang="fr" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Des sites web qui vous ressemblent" />
+    <meta property="og:locale" content="fr"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="oeilgauche - Des sites web qui vous ressemblent"/>
+    <meta property="og:url" content="http://www.oeilgauche.com/"/>
+    <meta property="og:site_name" content="oeilgauche"/>
+    <title>oeilgauche | Des sites web qui vous ressemblent</title>
+    <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,700,800,400italic' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    
+    <section class="hero">
+      <div class="row intro">
+        <div class="row">
+          <div class="small-centered medium-centered medium-12 large-12 columns">
+            <div class="tech-img"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-centered medium-centered medium-6 large-8 columns">
+            <h1>Création de projets web</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-centered medium-centered medium-6 large-6 columns icons">
+            <a href="https://www.facebook.com/oeilgauche"><img src="img/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/oeil_gauche"><img src="img/twitter.png" alt="Twitter"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+  </body>
+</html>
