--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
         <div class="row">
           <div class="small-centered medium-centered medium-6 large-6 columns icons">
-            <a href="https://www.facebook.com/oeilgauche"><img src="http://oeilgauche.github.io/img/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/oeil_gauche"><img src="http://oeilgauche.github.io/img/twitter.png" alt="Twitter"></a>
+            <a href="https://www.facebook.com/oeilgauche"><img src="https://raw.githubusercontent.com/oeilgauche/oeilgauche.github.io/master/img/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/oeil_gauche"><img src="https://raw.githubusercontent.com/oeilgauche/oeilgauche.github.io/master/img/twitter.png" alt="Twitter"></a>
           </div>
         </div>
       </div>
