--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="http://www.oeilgauche.com/"/>
     <meta property="og:site_name" content="oeilgauche"/>
     <title>oeilgauche | Des sites web qui vous ressemblent</title>
-    <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
+    <link rel="icon" href="images/favicon.ico" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,700,800,400italic' rel='stylesheet' type='text/css'>
@@ -32,8 +32,8 @@
         </div>
         <div class="row">
           <div class="small-centered medium-centered medium-6 large-6 columns icons">
-            <a href="https://www.facebook.com/oeilgauche"><img src="https://raw.githubusercontent.com/oeilgauche/oeilgauche.github.io/master/img/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/oeil_gauche"><img src="https://raw.githubusercontent.com/oeilgauche/oeilgauche.github.io/master/img/twitter.png" alt="Twitter"></a>
+            <a href="https://www.facebook.com/oeilgauche"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/oeil_gauche"><img src="images/twitter.png" alt="Twitter"></a>
           </div>
         </div>
       </div>
