--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
         <div class="row">
           <div class="small-centered medium-centered medium-6 large-6 columns icons">
-            <a href="https://www.facebook.com/oeilgauche"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/oeil_gauche"><img src="images/twitter.png" alt="Twitter"></a>
+            <a href="https://www.facebook.com/oeilgauche"><div class="fb-img"></div></a>
+            <a href="https://twitter.com/oeil_gauche"><img src="images/tw.png" alt="TW"></a>
           </div>
         </div>
       </div>
