--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="row">
           <div class="small-centered medium-centered medium-6 large-6 columns icons">
-            <a href="https://www.facebook.com/oeilgauche"><div class="fb-img"></div></a>
+            <!--<a href="https://www.facebook.com/oeilgauche"><img src="images/fb.png" alt="FB"></a>-->
             <a href="https://twitter.com/oeil_gauche"><img src="images/tw.png" alt="TW"></a>
           </div>
         </div>
